Fix collapsed side bar for file upload assessments

--- a/src/main/webapp/app/file-upload-assessment/file-upload-assessment.component.scss
+++ b/src/main/webapp/app/file-upload-assessment/file-upload-assessment.component.scss
@@ -78,9 +78,15 @@
     min-height: 500px;
 }
 
-.card.collapsed .card-body,
-.card.collapsed .card-second-header,
-.card.collapsed .card-header .float-right,
-.card.collapsed .card-header h3 span {
-    display: none;
+.card.collapsed {
+    .card-body,
+    .card-second-header,
+    .card-header .float-right,
+    .card-header h3 span {
+        display: none;
+    }
+
+    .card-title {
+        text-align: center;
+    }
 }
